Implement JWT-based authentication and user registration/login endpoints